{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 24,
  "lineage": "12222b73-8d60-d480-e7dd-86d4aff3d73b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Azure_NI",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/networkInterfaces/Azure_NI",
            "internal_domain_name_suffix": "jk5l5hlfbhiu1lv2kmyeq5yd0g.parx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/virtualNetworks/AZVN-network/subnets/Azure_subnet"
              }
            ],
            "location": "francecentral",
            "mac_address": "60-45-BD-6D-F8-10",
            "name": "Azure_NI",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "resource-group-terra",
            "virtual_machine_id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Compute/virtualMachines/master"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Azure_subnet",
            "azurerm_virtual_network.AZVN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/networkInterfaces/Azure_NI|/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/networkSecurityGroups/NSG-SSH",
            "network_interface_id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/networkInterfaces/Azure_NI",
            "network_security_group_id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/networkSecurityGroups/NSG-SSH"
          },
          "dependencies": [
            "azurerm_network_interface.Azure_NI",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Azure_subnet",
            "azurerm_virtual_network.AZVN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/networkSecurityGroups/NSG-SSH",
            "location": "francecentral",
            "name": "NSG-SSH",
            "resource_group_name": "resource-group-terra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/networkSecurityGroups/NSG-SSH/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "NSG-SSH",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "resource-group-terra",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.233.130.109",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "public-ip",
            "resource_group_name": "resource-group-terra",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Azure_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/virtualNetworks/AZVN-network/subnets/Azure_subnet",
            "name": "Azure_subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "resource-group-terra",
            "virtual_network_name": "AZVN-network"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.AZVN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "AZVN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9dbfbe4a-0965-4dd1-aebc-5330487f03d6",
            "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/virtualNetworks/AZVN-network",
            "location": "francecentral",
            "name": "AZVN-network",
            "resource_group_name": "resource-group-terra",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/8b770f2f-8a7f-4db1-a45b-5f52b9dc6c73/resourceGroups/resource-group-terra/providers/Microsoft.Network/virtualNetworks/AZVN-network/subnets/Azure_subnet",
                "name": "Azure_subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}